--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.1.0",
     "@nestjs/passport": "^7.1.0",
@@ -30,7 +31,8 @@
     "@prisma/cli": "^2.3.0",
     "@prisma/client": "^2.3.0",
     "bcrypt": "^5.0.0",
-    "dotenv": "^8.2.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
