--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "moment": "^2.27.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -50,6 +51,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
+    "@types/moment": "^2.13.0",
     "@types/node": "^13.9.1",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
