--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@nestjs/swagger": "^4.5.12",
     "@prisma/cli": "^2.3.0",
     "@prisma/client": "^2.3.0",
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "moment": "^2.27.0",
@@ -48,7 +48,7 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@types/bcrypt": "^3.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
     "@types/moment": "^2.13.0",
