--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-validator": "^0.12.2",
     "moment": "^2.27.0",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
@@ -53,6 +54,7 @@
     "@types/jest": "25.2.3",
     "@types/moment": "^2.13.0",
     "@types/node": "^13.9.1",
+    "@types/passport-google-oauth20": "^2.0.3",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/shortid": "^0.0.29",
