--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "class-validator": "^0.12.2",
     "moment": "^2.27.0",
     "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "passport-vkontakte": "stevebest/passport-vkontakte#57/head",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
@@ -50,13 +52,16 @@
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cron": "^1.7.2",
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.8",
     "@types/moment": "^2.13.0",
     "@types/node": "^14.0.27",
+    "@types/passport-github": "^1.1.5",
     "@types/passport-google-oauth20": "^2.0.3",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
+    "@types/passport-vkontakte": "^1.3.0",
     "@types/shortid": "^0.0.29",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.8.0",
