--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "passport-vkontakte": "^0.3.3",
+    "passport-vkontakte": "ssh://git@github.com:ZVER3D/passport-vkontakte.git#master",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
