Change oauth routes to redirect to a client side url with the ttoken

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ VK_CLIENT_SECRET='BbrCbsuaM9qjtucMCbsG'
 
 GITHUB_CLIENT_ID='f2b31a935bb417a5577c'
 GITHUB_CLIENT_SECRET='03de61c6d28fda7cd46fe612ba9387e498934936'
+
+CLIENT_URL='http://localhost:3000'
